<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="20dp"
    android:outlineSpotShadowColor="@color/shadow"
    app:cardCornerRadius="8dp"
    app:cardElevation="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingVertical="20dp">


        <CheckBox
            android:id="@+id/checkbox_sound_scanner"
            style="@style/CheckBox"
            android:layout_marginTop="0dp"
            android:drawableEnd="@drawable/ic_music"
            android:text="@string/play_sound_scanner" />

        <CheckBox
            android:id="@+id/checkbox_discount"
            style="@style/CheckBox"
            android:drawableEnd="@drawable/ic_percent"
            android:text="@string/cash_discount" />

        <CheckBox
            android:id="@+id/checkbox_money"
            style="@style/CheckBox"
            android:drawableEnd="@drawable/ic_cash"
            android:text="@string/cash_by_money" />

        <CheckBox
            android:id="@+id/checkbox_card"
            style="@style/CheckBox"
            android:drawableEnd="@drawable/ic_credit_card_"
            android:text="@string/cash_by_card" />

        <CheckBox
            android:id="@+id/checkbox_debit"
            style="@style/CheckBox"
            android:drawableEnd="@drawable/ic_clipboard_text_clock"
            android:text="@string/cash_by_debit" />


    </LinearLayout>

</androidx.cardview.widget.CardView>