<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:gravity="center"
    android:paddingBottom="5dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edt_owner"
                android:background="@color/white"
                android:hint="@string/name_business_owner"
                android:layout_height="wrap_content" android:layout_width="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edt_business_name"
                android:imeOptions="actionDone"
                android:background="@color/white"
                android:hint="@string/business_name"
                android:layout_height="wrap_content" android:layout_width="match_parent"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.karimi.seller.widget.loader_button.LoaderButton
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_margin="5dp"
        android:background="@color/purple"
        android:clickable="true"
        android:focusable="true"
        app:btnText="@string/edit"
        app:btnTextSize="14dp"
        app:loaderIndicator="BallPulseIndicator"
        app:loaderIndicatorColor="@color/white" />

</LinearLayout>