<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".activity.support.SupportActivity">

    <include layout="@layout/include_toolbar_support" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="25dp">

            <TextView
                style="@style/TextMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_support"
                android:drawablePadding="13dp"
                android:gravity="center"
                android:text="@string/conenct_us" />

            <View
                style="@style/CustomLine"
                android:layout_marginVertical="20dp" />


            <TextView
                style="@style/TextMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_map_marker"
                android:drawablePadding="13dp"
                android:gravity="center"
                android:text="@string/address" />

            <TextView
                style="@style/TextMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:drawableTop="@drawable/ic_cellphone"
                android:drawablePadding="13dp"
                android:fontFamily="@font/iran_sans_fanum"
                android:gravity="center"
                android:text="@string/tel" />

            <TextView
                style="@style/TextMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:drawableTop="@drawable/ic_calendar"
                android:drawablePadding="13dp"
                android:fontFamily="@font/iran_sans_fanum"
                android:gravity="center"
                android:text="@string/time"
                android:textFontWeight="580" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_web" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:src="@drawable/ic_linkedin" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_instagram" />

    </LinearLayout>


</LinearLayout>