<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="8dp"
    android:outlineSpotShadowColor="@color/shadow"
    app:cardCornerRadius="8dp"
    app:cardElevation="3dp">


    <LinearLayout
        android:paddingBottom="30dp"
        android:paddingTop="10dp"
        android:paddingHorizontal="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <com.google.android.material.textfield.TextInputLayout
            style="@style/CustomTextInputLayout"
            android:hint="@string/price_buy"
            app:endIconDrawable="@drawable/ic_store"
            app:hintAnimationEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/CustomTextInputEditText"
                android:fontFamily="@font/iran_sans"
                android:gravity="start"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:paddingTop="13dp" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/CustomTextInputLayout"
            android:layout_marginTop="10dp"
            android:hint="@string/price_sela_on_product">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/CustomTextInputEditText"
                android:fontFamily="@font/iran_sans"
                android:gravity="right"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:paddingTop="13dp" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/CustomTextInputLayout"
            android:layout_marginTop="10dp"
            android:hint="@string/price_sale">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/CustomTextInputEditText"
                android:fontFamily="@font/iran_sans"
                android:gravity="right"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:paddingTop="13dp" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>



</androidx.cardview.widget.CardView>